tests/error/modifier_errors/ctrl_arg_body_copy.err
Error: Copy violation (at $FILE:13:20)
   | 
11 | def test() -> None:
12 |     q = qubit()
13 |     with control(q, q):
   |                     ^ Variable `q` with non-copyable type `qubit` cannot be
   |                       borrowed ...

Note:
   | 
12 |     q = qubit()
13 |     with control(q, q):
   |                  - Variable `q` already borrowed here

Guppy compilation failed due to 1 previous error
